--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <application
         android:allowBackup="true"
+        android:name=".DeliveryApplication"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -13,9 +14,8 @@
         android:theme="@style/Theme.DeliveryDAM2"
         tools:targetApi="31">
         <activity
-            android:name=".DeliveryApplication"
+            android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.DeliveryDAM2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
